--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,8 @@
 {
+  "compilerOptions": {
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true
+  },
   "extends": "astro/tsconfigs/strict"
 }
