chore: applying path configuration in 'tsconfig.json'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,16 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "@assets/*": ["assets/*"],
+      "@components/*": ["components/*"],
+      "@content/*": ["content/*"],
+      "@icons/*": ["icons/*"],
+      "@layouts/*": ["layouts/*"],
+      "@pages/*": ["pages/*"],
+      "@scripts/*": ["scripts/*"],
+      "@styles/*": ["styles/*"]
+    },
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true
